[gd_scene load_steps=23 format=3 uid="uid://d2ijsqy6tj1nf"]

[ext_resource type="Script" path="res://Scripts/player.gd" id="1_147pu"]
[ext_resource type="Resource" uid="uid://cnfg23ijcqglm" path="res://Inventory/playerInventory.tres" id="2_5gvf2"]
[ext_resource type="Texture2D" uid="uid://cf2wnmiclnbcj" path="res://assets/sprites/pnj1.png" id="2_nw64c"]
[ext_resource type="Script" path="res://Scripts/FinalStateMachine.gd" id="3_587ak"]
[ext_resource type="Script" path="res://Scripts/player_interact_state.gd" id="3_rd6jq"]
[ext_resource type="Script" path="res://Scripts/player_inventory_state.gd" id="3_str44"]
[ext_resource type="Script" path="res://Scripts/player_idle_state.gd" id="4_648wv"]
[ext_resource type="Script" path="res://Scripts/player_moving_state.gd" id="4_damux"]
[ext_resource type="Script" path="res://Scripts/player_state_manager.gd" id="8_d1alm"]
[ext_resource type="Script" path="res://Scripts/player_UI_state.gd" id="10_wsab8"]
[ext_resource type="FontFile" uid="uid://cl7oxrao185jj" path="res://Resources/subatomic.tsoonami.ttf" id="11_mag54"]
[ext_resource type="Script" path="res://Scripts/player_debug_state.gd" id="12_tu1ow"]

[sub_resource type="Animation" id="Animation_337n8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(0, 1)]
}

[sub_resource type="Animation" id="Animation_k6ol5"]
resource_name = "idle"
length = 4.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 2, 2.4, 2.8, 3.2, 3.6, 4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 6), Vector2i(1, 6), Vector2i(0, 6), Vector2i(1, 6), Vector2i(0, 6), Vector2i(0, 0)]
}

[sub_resource type="Animation" id="Animation_kbg0i"]
resource_name = "walk_down"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(0, 0), Vector2i(0, 1), Vector2i(0, 2), Vector2i(0, 3)]
}

[sub_resource type="Animation" id="Animation_jip0x"]
resource_name = "walk_left"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(2, 0), Vector2i(2, 1), Vector2i(2, 2), Vector2i(2, 3)]
}

[sub_resource type="Animation" id="Animation_n4cwn"]
resource_name = "walk_right"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(3, 0), Vector2i(3, 1), Vector2i(3, 2), Vector2i(3, 3)]
}

[sub_resource type="Animation" id="Animation_xwoec"]
resource_name = "walk_up"
length = 0.8
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PlayerSprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2i(1, 0), Vector2i(1, 1), Vector2i(1, 2), Vector2i(1, 3)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_u88gn"]
_data = {
"RESET": SubResource("Animation_337n8"),
"idle": SubResource("Animation_k6ol5"),
"walk_down": SubResource("Animation_kbg0i"),
"walk_left": SubResource("Animation_jip0x"),
"walk_right": SubResource("Animation_n4cwn"),
"walk_up": SubResource("Animation_xwoec")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_br6y1"]
size = Vector2(14, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1pcsl"]
size = Vector2(14, 13)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_5oxdn"]
cull_mode = 1
polygon = PackedVector2Array(-4, -1, -4, 0, 3, 0, 3, -1)

[node name="Player" type="CharacterBody2D" groups=["player"]]
texture_filter = 1
position = Vector2(123, 61)
collision_mask = 23
script = ExtResource("1_147pu")
inventory = ExtResource("2_5gvf2")
speed = 150
metadata/_edit_group_ = true

[node name="PlayerSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_nw64c")
offset = Vector2(0, -8)
hframes = 4
vframes = 7
frame = 4

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_u88gn")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_br6y1")
debug_color = Color(0.372549, 0.541176, 0.780392, 0.419608)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(0, -6.5)
shape = SubResource("RectangleShape2D_1pcsl")

[node name="Label" type="Label" parent="."]
visible = false
offset_left = -22.0
offset_top = -38.0
offset_right = 24.0
offset_bottom = -15.0
theme_override_fonts/font = ExtResource("11_mag54")
theme_override_font_sizes/font_size = 5
text = "[E] to interact"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FinalStateMachine" type="Node" parent="." node_paths=PackedStringArray("state")]
script = ExtResource("3_587ak")
state = NodePath("PlayerStateManager/PlayerIdleState")

[node name="PlayerStateManager" type="Node" parent="FinalStateMachine"]
script = ExtResource("8_d1alm")

[node name="PlayerIdleState" type="Node" parent="FinalStateMachine/PlayerStateManager"]
script = ExtResource("4_648wv")

[node name="PlayerMovingState" type="Node" parent="FinalStateMachine/PlayerStateManager"]
script = ExtResource("4_damux")

[node name="PlayerInteractState" type="Node" parent="FinalStateMachine/PlayerStateManager"]
script = ExtResource("3_rd6jq")

[node name="PlayerInventoryState" type="Node" parent="FinalStateMachine/PlayerStateManager"]
script = ExtResource("3_str44")

[node name="PlayerUIState" type="Node" parent="FinalStateMachine/PlayerStateManager"]
script = ExtResource("10_wsab8")

[node name="PlayerDebugState" type="Node" parent="FinalStateMachine/PlayerStateManager"]
script = ExtResource("12_tu1ow")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_5oxdn")
